@@ -22,17 +22,34 @@ download_custom_tar() {
     fi
 }
 
+import_ssl_cert() {
+    if [ -f /etc/certs/gluu_https.crt ]; then
+        openssl x509 -outform der -in /etc/certs/gluu_https.crt -out /etc/certs/gluu_https.der
+        keytool -importcert -trustcacerts \
+            -alias gluu_https \
+            -file /etc/certs/gluu_https.der \
+            -keystore /usr/lib/jvm/default-jvm/jre/lib/security/cacerts \
+            -storepass changeit \
+            -noprompt
+    fi
+}
+
 if [ ! -f /touched ]; then
     download_custom_tar
     python /opt/scripts/entrypoint.py
+    import_ssl_cert
     touch /touched
 fi
 
 python /opt/scripts/jks_sync.py &
 
 cd /opt/gluu/jetty/oxauth
-exec java -jar /opt/jetty/start.jar -server \
-    -Xms256m -Xmx4096m -XX:+DisableExplicitGC \
+exec java -jar /opt/jetty/start.jar \
+    -server \
+    -XX:+UnlockExperimentalVMOptions \
+    -XX:+UseCGroupMemoryLimitForHeap \
+    -XX:MaxRAMFraction=$GLUU_MAX_RAM_FRACTION \
+    -XX:+DisableExplicitGC \
     -Dgluu.base=/etc/gluu \
     -Dserver.base=/opt/gluu/jetty/oxauth \
     -Dlog.base=/opt/gluu/jetty/oxauth \
